Fix unwanted appearance of horizontal scrollbar

--- a/src/main/webapp/app/components/data-table/data-table.component.scss
+++ b/src/main/webapp/app/components/data-table/data-table.component.scss
@@ -6,6 +6,10 @@
     color: white !important;
 }
 
+.datatable-scroll {
+    width: 100% !important;
+}
+
 .loading-container {
     height: 40vh;
 }
